--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -18,9 +18,86 @@ header, footer {
     text-align: center;
 }
 main {
+    display: flex;
+    flex-direction: row;
     padding: 10px;
     margin: 0 10vw; /* 좌우 여백 추가 */
     text-align: center;
+}
+.info-section {
+    width: 30%;
+    padding: 20px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* 지도에 그림자 효과 */
+    overflow-y: auto; /* 세로 스크롤 바 표시 */
+}
+.info-section ul {
+    list-style-type: none; /* 리스트 앞의 점 제거 */
+    padding: 0; /* 내부 여백 초기화 */
+    margin: 0; /* 외부 여백 초기화 */
+}
+.info-section ul li {
+    border: 1px solid #ddd; /* 테두스 테두리 */
+    margin: 5px 6px 5px 6px; /* 항목 간의 여백 */
+    padding: 10px; /* 내부 여백 */
+    background-color: #fff; /* 배경색 */
+    cursor: pointer; /* 마우스 오버 시 손가락 커서 */
+    transition: transform 0.2s ease-in-out; /* 변형에 대한 부드러운 전환 효과 */
+}
+.info-section ul li:hover {
+    transform: scale(1.01); /* 호버 시 조금 확대 */
+    border-color: #999; /* 호버 시 테두리 색상 변경 */
+}
+/* 스크롤 바 스타일 */
+.info-section::-webkit-scrollbar {
+    width: 10px;
+}
+
+.info-section::-webkit-scrollbar-thumb {
+    background-color: #c1c1c1; /* 스크롤바 색상 */
+    border-radius: 20px; /* 스크롤바 모서리를 둥글게 */
+    background-clip: padding-box; /* 내부 여백으로부터 배경 클리핑 */
+    border: 2px solid transparent; /* 투명한 테두리를 추가하여 타원형 만들기 */
+}
+
+.info-section::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* 스크롤 트랙 색상 */
+    border-radius: 20px; /* 스크롤 트랙 모서리를 둥글게 */
+}
+
+#storeList {
+    list-style: none; /* 기본 리스트 스타일 제거 */
+    padding: 0; /* 기본 패딩 제거 */
+    margin: 0; /* 기본 마진 제거 */
+    max-height: 500px; /* 스크롤 영역의 최대 높이 설정 */
+    overflow-y: auto; /* 내용이 넘칠 때 스크롤 바를 표시 */
+}
+
+#storeList li {
+    border: 1px solid #ddd; /* 경계선 스타일 */
+    padding: 8px 16px; /* 패딩 설정 */
+    margin-bottom: 5px; /* 항목 사이의 여백 */
+    background-color: #f9f9f9; /* 배경색 */
+    cursor: pointer; /* 마우스 오버시 손가락 커서 */
+    transition: transform 0.3s; /* 애니메이션 효과 */
+    padding-right: 30px; /* 오른쪽 패딩을 더 크게 설정하여 확대했을 때 스크롤이 생기지 않도록 함 */
+    box-sizing: border-box; /* 박스 크기 계산 방식을 변경하여 패딩을 너비에 포함 */
+}
+
+#storeList li:hover {
+    transform: scale(1.03); /* 확대 비율을 줄여서 x축 스크롤이 생기지 않도록 함 */
+}
+
+.map-section {
+    position: relative;
+    width: 70%;
+    padding: 20px;
+    margin-right: 10px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.2); /* 지도에 그림자 효과 */
+    margin-right: 10px;
+}
+#map {
+    height: 500px;
+    /* 필요에 따라 추가 스타일 */
 }
 .footer-content {
     text-align: center;
@@ -69,4 +146,11 @@ main {
 .search button:focus {
     border-color: #333; /* 포커스 시 테두리 색 진하게 변경 */
     outline: none; /* 기본 포커스 테두리 제거 */
+}
+#relocate {
+    background: none;
+    border: none;
+    cursor: pointer;
+    outline: none;
+    z-index: 1;
 }
