--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -163,3 +163,45 @@ main {
     background-position: right 10px center; /* 배경 이미지 위치 조정 */
     background-repeat: no-repeat; /* 배경 이미지 반복 방지 */
 }
+
+.wrap {position: absolute; left: 0; bottom: 40px; width: 288px; height: 132px; margin-left: -144px; text-align: left; overflow: hidden; font-size: 12px; font-family: 'Malgun Gothic', dotum, '돋움', sans-serif; line-height: 1.5;}
+.wrap * {padding: 0; margin: 0;}
+.wrap .info {width: 286px; height: 120px; border-radius: 5px; border-bottom: 2px solid #ccc; border-right: 1px solid #ccc; overflow: hidden; background: #fff;}
+.wrap .info:nth-child(1) {border: 0; box-shadow: 0px 1px 2px #888;}
+.info .title {padding: 5px 0 0 10px; height: 30px; background: #eee; border-bottom: 1px solid #ddd; font-size: 18px; font-weight: bold;}
+.info .close {position: absolute; top: 10px; right: 10px; color: #888; width: 17px; height: 17px; background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/overlay_close.png');}
+.info .close:hover {cursor: pointer;}
+.info .body {position: relative; overflow: visible;}
+.info .desc {position: relative; margin: 0px 0 0 90px; height: auto; font-size: 12px; line-height: 1.5; white-space: normal;}
+.desc .ellipsis {overflow: visible; text-overflow: clip; white-space: normal;}
+.desc .jibun {font-size: 11px; color: #888; margin-top: -2px;}
+.info .img {position: absolute; top: 6px; left: 5px; width: 73px; height: 71px; border: 1px solid #ddd; color: #888; overflow: hidden;}
+.info:after {content: ''; position: absolute; margin-left: -12px; left: 50%; bottom: 0; width: 22px; height: 12px; background: url('https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/vertex_white.png')}
+.info .link {color: #5085BB;}
+
+/* 팝업 스타일 */
+#popup {
+    display: none; /* 초기에는 숨김 */
+    position: fixed;
+    width: 500px;
+    height: 600px;
+    background-color: white;
+    border: 1px solid #ccc;
+    border-radius: 5px; 
+    border-bottom: 2px solid #ccc; 
+    border-right: 1px solid #ccc;
+    z-index: 10000;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#popup-content {
+    padding: 20px;
+}
+
+#close-popup-btn {
+    position: absolute; 
+    bottom: 10px; 
+    right: 10px;
+}
